<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:orientation="vertical"
    tools:context="com.haiying.p2papp.fragment.SecondFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorTitleBlue"
        android:tag="(0,90)">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:tag="(36)"
            android:text="@string/main_02_title_01"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:tag="(0,96)">

        <LinearLayout
            android:id="@+id/ll_tab_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_color_main_01_tab_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:tag="(180,56)">

            <TextView
                android:id="@+id/tv_invest_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(27)"
                android:text="@string/main_02_tab_01"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/selector_color_main_02_tab_background"
            android:gravity="center"
            android:orientation="horizontal"
            android:tag="(180,56)">

            <TextView
                android:id="@+id/tv_regular_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(27)"
                android:text="@string/main_02_tab_02"
                android:textColor="@color/colorTitleBlue" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorGreydividingline"
        android:tag="(0,1)" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:tag="(0,69)">

        <LinearLayout
            android:id="@+id/ll_sp_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(27)"
                android:text="@string/main_02_chose_01"
                android:textColor="@color/greyText" />

            <ImageView
                android:id="@+id/iv_sp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_action_downarrow_blue"
                android:tag="(18,12){10,0,0,0}" />

        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_sp_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(27)"
                android:text="@string/main_02_chose_02"
                android:textColor="@color/greyText" />

            <ImageView
                android:id="@+id/iv_sp_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_action_downarrow_blue"
                android:tag="(18,12){10,0,0,0}" />

        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_sp_3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(27)"
                android:text="@string/main_02_chose_03"
                android:textColor="@color/greyText" />

            <ImageView
                android:id="@+id/iv_sp_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_action_downarrow_blue"
                android:tag="(18,12){10,0,0,0}" />
        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/ll_sp_4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="(27)"
                android:text="@string/main_02_chose_04"
                android:textColor="@color/greyText" />

            <ImageView
                android:id="@+id/iv_sp_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_action_downarrow_blue"
                android:tag="(18,12){10,0,0,0}" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/sp_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/sp_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/sp_03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/sp_04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <com.module.pull.PullToRefreshListView
        android:id="@+id/lv_invest"
        android:tag="{0,20,0,0}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

    </com.module.pull.PullToRefreshListView>

    <in.srain.cube.views.ptr.PtrFrameLayout xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
    android:id="@+id/store_house_ptr_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    cube_ptr:ptr_duration_to_close="300"
    cube_ptr:ptr_duration_to_close_header="2000"
    cube_ptr:ptr_keep_header_when_refresh="true"
    cube_ptr:ptr_pull_to_fresh="false"
    cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
    cube_ptr:ptr_resistance="1.7">

    <android.support.v7.widget.RecyclerView
    android:id="@+id/rv_01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="9px"
    android:layout_marginRight="9px"
    android:clipToPadding="false"
    android:tag="[0,20,0,0]{9,0,9,0}(0,0)"
    tools:layout_marginTop="20px"
    tools:listitem="@layout/list_01_item_view"></android.support.v7.widget.RecyclerView>
    </in.srain.cube.views.ptr.PtrFrameLayout>

</LinearLayout>
