<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical"
    tools:context=".activity.MyRedpacketActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="@color/colorMainBlue"
        android:tag="(0,100)">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:tag="(0,0,32)"
            android:text="@string/mr_title"
            android:textColor="@color/colorWhite"
            tools:textSize="32px" />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="64px"
            android:layout_height="78px"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            android:onClick="onBack"
            android:src="@mipmap/ic_action_back"
            android:tag="[20,20,20,20](64,78)"
            android:visibility="visible"
            tools:padding="20px" />

        <TextView
            android:id="@+id/tv_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="25px"
            android:layout_marginTop="34px"
            android:tag="{0,34,25,0}(0,0,28)"
            android:text="@string/mr_01"
            android:textColor="@color/colorWhite"
            android:textSize="28px" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_01"
        android:layout_width="243px"
        android:layout_height="243px"
        android:tag="(243,243,34){0,57,0,0}"
        android:text="0.00"
        android:textColor="#E9DA4C"
        android:background="@drawable/shape_hongbao"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="57px"
        android:textSize="34px"
        android:textStyle="bold" />
  <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143px"
        android:background="#F6F6F6"
        android:gravity="center"
        android:orientation="horizontal"
        android:tag="(0,163)">

      &lt;!&ndash;  <Button
            android:layout_width="124px"
            android:layout_height="50px"
            android:layout_marginRight="6px"
            android:layout_marginTop="6px"
            android:background="@drawable/shape_bg_redpacket_bt"
            android:tag="{0,6,6,0}(124,50,26)"
            android:text="@string/mr_02"
            android:textColor="@color/colorWhite"
            android:textSize="26px" />&ndash;&gt;

        <TextView
            android:id="@+id/tv_01"
            android:layout_width="243px"
            android:layout_height="243px"
            android:tag="(243,243,34)"
            android:text="0.00"
            android:textColor="#E9DA4C"
            android:background="@drawable/shape_hongbao"
            android:gravity="center"
            android:textSize="34px"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:tag="{0,8,0,0}(0,0,40)"
            android:text="元"
            android:textColor="@color/colorBlack"
            android:textSize="40px"
            android:textStyle="bold" />
    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75px"
        android:background="@color/colorWhite"
        android:layout_marginTop="52px"
        android:tag="(0,75){0,52,0,0}">

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#41B0E8"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="24px"
            android:layout_marginTop="20px"
            android:layout_marginBottom="20px"
            android:tag="(8,0){24,20,0,24}"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="{23,0,0,0}(0,0,24)"
            android:text="@string/mr_03"
            android:textColor="#666666"
            android:layout_gravity="center_vertical"
            tools:layout_marginLeft="23px"

            tools:textSize="24px" />
    </LinearLayout>

    <in.srain.cube.views.ptr.PtrFrameLayout xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/store_house_ptr_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        cube_ptr:ptr_duration_to_close="300"
        cube_ptr:ptr_duration_to_close_header="2000"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_pull_to_fresh="false"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_resistance="1.7">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            tools:listitem="@layout/list_02_item_view"></android.support.v7.widget.RecyclerView>
    </in.srain.cube.views.ptr.PtrFrameLayout>
</LinearLayout>